--- a/service-items-dev.yml
+++ b/service-items-dev.yml
@@ -1,6 +1,7 @@
-server:
-  port: 8006
 configuracion:
   texto: Configurando ambiente Desarrollo
+  autor:
+    nombre: Enrique
+    email: enrique@correo.com
 
 
