--- a/service-items-dev.yml
+++ b/service-items-dev.yml
@@ -1,7 +1,7 @@
 configuracion:
-  texto: Configurando ambiente Desarrollo
+  texto: Configurando ambiente Desarrollo prueb actualizacion
   autor:
-    nombre: Enrique
+    nombre: Prueba
     email: enrique@correo.com
 
 
