--- a/service-items-dev.yml
+++ b/service-items-dev.yml
@@ -1,7 +1,7 @@
 configuracion:
-  texto: Configurando ambiente Desarrollo prueb actualizacion
+  texto: Configurando ambiente Desarrollo.
   autor:
-    nombre: Prueba
+    nombre: Enrique
     email: enrique@correo.com
 
 
